--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,21 @@ nav {
     margin-top: 30px;
 }
 
-.collapse-first {
+.well-order {
     margin-top: 20px;
+    margin-bottom: 0;
+    padding: 0;
+    padding-top: 10px;
+    background: none;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
 }
 
-.well {
+th {
+    font-weight: normal;
+}
+
+.no-margin-bottom {
     margin-bottom: 0;
 }
